<resources>
    <string name="app_name">Money Assistant</string>
    <string name="transactions">Transactions</string>
    <string name="display_type">Display type</string>
    <string name="press_again">Press back again for exit!</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="add_item">Add item</string>
    <string name="add_new_transaction">New transaction</string>
    <string name="add_new_wallet">New wallet</string>
    <string name="add_new_category">New category</string>
    <string name="categories">Categories</string>
    <string name="transactions_short">Trans.</string>
    <string name="accounts">Wallets</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="transfer">Transfer</string>
    <string name="total">Total</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="my_wallets">My Wallets</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="wallet_current_amount">Current Amount</string>
    <string name="save">Save</string>
    <string name="wallet_type_cash">Cash</string>
    <string name="wallet_type_bank">Bank Account</string>
    <string name="wallet_type_card">Card</string>
    <string name="wallet_type_debit_card">Debit Card</string>
    <string name="wallet_type_savings">Savings</string>
    <string name="wallet_type_prepaid">Top-Up/Prepaid</string>
    <string name="wallet_type_investments">Investments</string>
    <string name="wallet_type_overdrafts">Overdrafts</string>
    <string name="wallet_type_loan">Loan</string>
    <string name="wallet_type_insurance">Insurance</string>
    <string name="wallet_type_others">Others</string>
    <string name="user_interface">User interface</string>
    <string name="app_theme">App Theme</string>
    <string name="date_format">Date Format</string>
    <string name="income_category">Income Categories</string>
    <string name="expense_category">Expense Categories</string>
    <string name="configuration">Configuration</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="passcode">Passcode</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="other">Others</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="rating">Google Play Rating</string>
    <string name="feedback">Feedback</string>
    <string name="fuel">Fuel</string>
    <string name="clothes">Clothes</string>
    <string name="restaurant">Restaurant</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="gifts">Gifts</string>
    <string name="holidays">Holidays</string>
    <string name="shopping">Shopping</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="health">Health</string>
    <string name="transportation">Transportation</string>
    <string name="self_development">Self Development</string>
    <string name="education">Education</string>
    <string name="salary">Salary</string>
    <string name="personal_wallet">Personal Wallet</string>
    <string name="personal_account">Personal Account</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="print">Print</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_account">Choose Account</string>
    <string name="no_name">Name is required!</string>
    <string name="insert_error">An error has occurred. Please try again!</string>
    <string name="date">Date</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="Amount">Amount</string>
    <string name="details">Details</string>
    <string name="from_account">From</string>
    <string name="to_account">To</string>
    <string name="repeat">Repeat transaction</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="no_amount">Please enter the amount</string>
    <string name="zero_amount">Amount value must be greater than 0!</string>
    <string name="no_data">No data available… :(</string>
    <string name="zero">0.00</string>
    <string name="select_items">Select items to delete</string>
    <string name="error_delete">The following items can`t be deleted because they are linked to a transaction: </string>
    <string name="error_del">This item can`t be deleted because it is linked to a transaction!</string>
    <string name="ok">OK</string>
    <string name="confirm_delete">Are you sure you want to delete this?</string>
    <string name="transfer_error">Source account and destination account are the same!</string>
    <string name="passcode_protect">Passcode Protection</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="deleted">has been deleted!</string>
    <string name="details_label">Add a note</string>
    <string name="nthng_label">nothing selected</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="export">Export</string>
    <string name="name_hint">type a name…</string>
    <string name="amount_hint">enter amount…</string>
    <string name="app_version">App version: 1.0.0</string>
    <string name="notifications">Notifications</string>
    <string name="notification_title">Transactions Manager</string>
    <string name="notification_content">Don`t forget to record your transactions!</string>
    <string name="csv_format">CSV</string>
    <string name="xls_format">Excel</string>
    <string name="format">Format</string>
    <string name="intro">Intro</string>
    <string name="skip">Skip</string>
    <string name="finish">Start</string>
    <string name="intro1_title">Simple Tracking</string>
    <string name="intro1_content">Track your transactions within a few seconds</string>
    <string name="intro2_title">Manage Wallets</string>
    <string name="intro2_content">Manage and view your wallets easily</string>
    <string name="intro3_title">Handle Categories</string>
    <string name="intro3_content">Take control on your own transaction categories</string>
</resources>
