<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/transactions"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_list_24px"
        android:title="@string/transactions"
        tools:ignore="AlwaysShowAction" />

    <!--<item android:id="@+id/reports"-->
        <!--app:showAsAction="always|withText"-->
        <!--android:icon="@drawable/ic_baseline_equalizer_24px"-->
        <!--android:title="@string/reports"/>-->

    <item android:id="@+id/accounts"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_payment_24px"
        android:title="@string/accounts"/>

    <item android:id="@+id/settings"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_baseline_settings_20px"
        android:title="@string/settings"/>

</menu>