<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/nav_transactions">

    <fragment
        android:id="@+id/nav_transactions"
        android:name="moneyassistant.expert.ui.transaction.fragment.TransactionsFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="moneyassistant.expert.ui.account.fragment.AccountsFragment"
        android:label="@string/accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="moneyassistant.expert.ui.settings.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>