<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorSmokeWhite"
    tools:context=".view.activity.ExportActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/format"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorGray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/csv_format"
                    android:checked="true"
                    android:layout_weight="1"
                    android:text="@string/csv_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/xls_format"
                    android:layout_weight="1"
                    android:text="@string/xls_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/account"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorGray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />
            <Spinner
                android:background="@color/colorWhite"
                android:id="@+id/accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:text="@string/export"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>