<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarlayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/AppTheme.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            app:layout_constraintTop_toBottomOf="@id/appbarlayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/categories"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/categories"
                    android:drawableStart="@drawable/ic_baseline_view_module_24px"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/fingerprint"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_baseline_fingerprint_24px"
                    android:text="@string/fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/passcode"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_baseline_lock_24px"
                    android:text="@string/passcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/currency"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:text="@string/currency"
                    android:drawableStart="@drawable/ic_baseline_attach_money_24px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/language"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_baseline_public_24px"
                    android:text="@string/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/about"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_baseline_info_24px"
                    android:text="@string/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/share"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:text="@string/share"
                    android:drawableStart="@drawable/ic_baseline_share_24px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/feedback"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_baseline_feedback_24px"
                    android:drawablePadding="16dp"
                    android:text="@string/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/rate"
                    android:background="@color/colorWhite"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_baseline_star_rate_18px"
                    android:text="@string/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>