<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/arrow_left"
                    android:contentDescription="@string/previous"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24px"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:padding="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/arrow_right"
                    android:padding="8dp"
                    android:contentDescription="@string/next"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24px"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/quick_stats"
            android:baselineAligned="false"
            android:background="@color/colorWhite"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/income"
                    android:text="@string/income"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/income_value"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/colorGreen"
                    android:layout_below="@id/income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/expenses"
                    android:text="@string/expenses"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/expenses_value"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/colorRed"
                    android:layout_below="@id/expenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/total"
                    android:text="@string/total"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/total_value"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlue"
                    android:layout_below="@id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_below="@id/quick_stats"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_below="@id/divider"
            android:id="@+id/transactions_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_transaction_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_baseline_add_24px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</FrameLayout>